modified header, deleted link

--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 </head>
 
 <body>
-<header>WCHS Morning Show</header>
-<a href="WCHS_Crew.html">WCHS Crew</a>
+<header>WCHS Morning Cupcake</header>
 <img src="0823170859a_HDR.jpg" width="1500" height="900" alt=""/>
 <h1>Latest Morning Show</h1>
 <div><script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
